Fix alignment and spacing in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,16 +233,18 @@ h6 {
     color: #fff;
 }
 
-/*Footer text */
-.footer-text a {
+/*Footer Icons */
+.footer .fa-arrow-up{  
+    margin-left: 5px;
     color: #21a4a2;
 }
 
-/*Footer text */
-.footer-text {
-    margin-top: 20px;
-    margin-bottom: 30px;
+.scroll-top {  
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: -3px;
 }
+
 
 /*Media query - hover toggle menu */
 
